--- a/lib/client/app/application/global/dialogs/passwordReset.html
+++ b/lib/client/app/application/global/dialogs/passwordReset.html
@@ -37,10 +37,10 @@
                                     </md-list-item>
                                     <div layout-padding layout="row" layout-align="end center">
                                         <div>
-                                            <md-button ng-confirm-message="Are you sure you want to cancel?" ng-confirm-click="closePasswordReset()" ng-confirm-condition="true" style="background: transparent;">
+                                            <md-button ng-confirm-message="Are you sure you want to cancel?" ng-confirm-click="closePasswordReset()" ng-confirm-condition="true" style="background: transparent; padding-left: 16px; padding-right: 16px;">
                                             Cancel
                                             </md-button>
-                                            <md-button type="submit" ng-click="passReset(resetUser)" class="md-raised" style="background: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};" >
+                                            <md-button type="submit" ng-click="passReset(resetUser)" class="md-raised" style="background: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}}; padding-left: 16px; padding-right: 16px;" >
                                             Reset Password
                                             </md-button>
                                         </div>
