--- a/lib/client/app/application/global/dialogs/settings.html
+++ b/lib/client/app/application/global/dialogs/settings.html
@@ -117,8 +117,8 @@
                 <!-- =================== Navigation Items =================== -->
 
                 <div flex="50" flex-gt-sm="75" layout-align="end center" layout="row" ng-init="navigation_panel = false">
-                    <md-button class="md-icon-button" aria-label="Close My Vault">
-                        <md-icon style="color: {{base_hue_darkest.value}}; cursor: pointer;" aria-label="Remove Task" md-font-library="material-icons" ng-confirm-message="Are you sure you exit settings? Unsaved changes may be discarded" ng-confirm-click="close_edit_configuration()" ng-confirm-condition="true">close</md-icon>
+                    <md-button class="md-icon-button" aria-label="Close My Vault" ng-confirm-message="Are you sure you exit settings? Unsaved changes may be discarded" ng-confirm-click="close_edit_configuration()" ng-confirm-condition="true">
+                        <md-icon style="color: {{base_hue_darkest.value}}; cursor: pointer;" aria-label="Remove Task" md-font-library="material-icons">close</md-icon>
                     </md-button>
                 </div>
 
@@ -185,6 +185,12 @@
                             </md-list-item>
                             <md-list-item>
                                 <md-input-container class="md-block lightweight-md-input" flex>
+                                    <label>General Company Email</label>
+                                    <input ng-model="settings.data.general_email">
+                                </md-input-container>
+                            </md-list-item>
+                            <md-list-item>
+                                <md-input-container class="md-block lightweight-md-input" flex>
                                     <label>Street</label>
                                     <input ng-model="settings.data.address.street">
                                 </md-input-container>
@@ -227,7 +233,7 @@
                         </md-card-content>
                         <md-card-actions layout="row" layout-align="end center">
                             <div flex></div>
-                            <md-button md-raised style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};" ng-confirm-message="Are you sure you want to update your company settings?" ng-confirm-click="updateSettings()" ng-confirm-condition="true">Update</md-button>
+                            <md-button md-raised style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}}; padding-left: 16px; padding-right: 16px;" ng-confirm-message="Are you sure you want to update your company settings?" ng-confirm-click="updateSettings()" ng-confirm-condition="true">Update</md-button>
                         </md-card-actions>
                     </md-card>
                 </div>
@@ -383,7 +389,7 @@
                         </md-card-content>
                         <md-card-actions layout="row" layout-align="end center">
                             <div flex></div>
-                            <md-button md-raised style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};" ng-confirm-message="Are you sure you want to update your company settings?" ng-confirm-click="updateSettings()" ng-confirm-condition="true">Update</md-button>
+                            <md-button class="md-raised" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}}; padding-left: 16px; padding-right: 16px;" ng-confirm-message="Are you sure you want to update your company settings?" ng-confirm-click="updateSettings()" ng-confirm-condition="true">Update</md-button>
                         </md-card-actions>
                     </md-card>
                 </div>
@@ -420,7 +426,7 @@
                                 </md-list-item>
                             </md-card-content>
                             <md-card-actions layout="row" layout-align="end center">
-                                <md-button ng-confirm-message="Are you sure you want to remove this page?" ng-confirm-click="deletePage($index)" ng-confirm-condition="!page.settings.locked || !page.settings.linked" ng-disabled="page.settings.locked == true || page.settings.linked == true" class="md-whiteframe-2dp" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">Delete</md-button>
+                                <md-button ng-confirm-message="Are you sure you want to remove this page?" ng-confirm-click="deletePage($index)" ng-confirm-condition="!page.settings.locked || !page.settings.linked" ng-disabled="page.settings.locked == true || page.settings.linked == true" class="md-whiteframe-2dp md-raised" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}}; padding-left: 16px; padding-right: 16px;">Delete</md-button>
                             </md-card-actions>
                         </md-card>
                     </div>
@@ -500,8 +506,8 @@
                             </md-card-content>
                             <md-card-actions layout="row" layout-align="end center">
                                 <div flex></div>
-                                <md-button style="background-color: {{base_hue_lightest.value}}; color: {{primary_hue_normal.value}};" ng-click="setting = 'Manage Pages'">Cancel</md-button>
-                                <md-button ng-disabled="addNewPage.$invalid" md-raised style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};" ng-confirm-message="Are you sure you want to add this page?" ng-confirm-click="addPage(newPageData.type, newPageData); setting = 'Manage Pages'" ng-confirm-condition="addNewPage.$valid">Add</md-button>
+                                <md-button class="md-raised" style="background-color: {{base_hue_lightest.value}}; color: {{primary_hue_normal.value}}; padding-left: 16px; padding-right: 16px;" ng-click="setting = 'Manage Pages'">Cancel</md-button>
+                                <md-button ng-disabled="addNewPage.$invalid" class="md-raised" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}}; padding-left: 16px; padding-right: 16px;" ng-confirm-message="Are you sure you want to add this page?" ng-confirm-click="addPage(newPageData.type, newPageData); setting = 'Manage Pages'" ng-confirm-condition="addNewPage.$valid">Add</md-button>
                             </md-card-actions>
                         </form>
                     </md-card>
@@ -562,7 +568,7 @@
                             <md-card-actions ng-if="child_nav_items.length > 0" layout="row" layout-align="end center">
                                 <div flex></div>
                                 <!-- <md-button ng-confirm-message="Are you sure you want to deselect this navigation item?" ng-confirm-click="clearParentNav()" ng-confirm-condition="true" md-raised style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">Cancel</md-button> -->
-                                <md-button ng-confirm-message="Are you sure you want to update the navigation?" ng-confirm-click="updateNavigation()" ng-confirm-condition="manageNavigation.$valid" ng-disabled="manageNavigation.$invalid" md-raised style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">Update</md-button>
+                                <md-button ng-confirm-message="Are you sure you want to update the navigation?" ng-confirm-click="updateNavigation()" ng-confirm-condition="manageNavigation.$valid" ng-disabled="manageNavigation.$invalid" class="md-raised" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}}; padding-left: 16px; padding-right: 16px;">Update</md-button>
                             </md-card-actions>
                         </form>
                     </md-card>
@@ -686,10 +692,10 @@
                                 </md-tabs>
                             </md-card-content>
                             <md-card-actions ng-show="staff_detail_view" layout="row" layout-align="end center">
-                                <md-button ng-if="staff.id == undefined" style="background-color: {{base_hue_lightest.value}}; color: {{primary_hue_normal.value}};" ng-click="cancelStaff()">Cancel</md-button>
-                                <md-button class="md-whiteframe-2dp" ng-if="staff.id == undefined" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};" ng-click="addStaffMember(staff)">Save</md-button>
-                                <md-button ng-if="staff.id != undefined" style="background-color: {{base_hue_lightest.value}}; color: {{primary_hue_normal.value}};" ng-click="removeStaff(staff.id, settings.staff.members)">Remove</md-button>
-                                <md-button class="md-whiteframe-2dp" ng-if="staff.id != undefined" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};" ng-click="updateStaffMember(staff)">Update</md-button>
+                                <md-button class="md-raised" ng-if="staff.id == undefined" style="background-color: {{base_hue_lightest.value}}; color: {{primary_hue_normal.value}}; padding-left: 16px; padding-right: 16px;" ng-click="cancelStaff()">Cancel</md-button>
+                                <md-button class="md-raised" ng-if="staff.id == undefined" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}}; padding-left: 16px; padding-right: 16px;" ng-click="addStaffMember(staff)">Save</md-button>
+                                <md-button class="md-raised" ng-if="staff.id != undefined" style="background-color: {{base_hue_lightest.value}}; color: {{primary_hue_normal.value}}; padding-left: 16px; padding-right: 16px;" ng-click="removeStaff(staff.id, settings.staff.members)">Remove</md-button>
+                                <md-button class="md-raised" ng-if="staff.id != undefined" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}}; padding-left: 16px; padding-right: 16px;" ng-click="updateStaffMember(staff)">Update</md-button>
                             </md-card-actions>
                         </md-card>
                     </div>
