--- a/lib/client/app/application/global/dialogs/tasks.html
+++ b/lib/client/app/application/global/dialogs/tasks.html
@@ -44,8 +44,8 @@
                 <!-- =================== Navigation Items =================== -->
 
                 <div flex="50" flex-gt-sm="75" layout-align="end center" layout="row" ng-init="navigation_panel = false">
-                    <md-button class="md-icon-button" aria-label="Close My Vault">
-                        <md-icon style="color: {{base_hue_darkest.value}}; cursor: pointer;" aria-label="Remove Task" md-font-library="material-icons" ng-confirm-message="Are you sure you want to exit Task Runner?" ng-confirm-click="closeTaskRunner()" ng-confirm-condition="true">close</md-icon>
+                    <md-button class="md-icon-button" aria-label="Close My Vault" ng-confirm-message="Are you sure you want to exit Task Runner?" ng-confirm-click="closeTaskRunner()" ng-confirm-condition="true">
+                        <md-icon style="color: {{base_hue_darkest.value}}; cursor: pointer;" aria-label="Remove Task" md-font-library="material-icons">close</md-icon>
                     </md-button>
                 </div>
 
@@ -87,19 +87,23 @@
                                 <md-list-item ng-repeat="task in tasklist track by $index" class="noright" ng-mouseenter="hovered = true" ng-mouseleave="hovered = false" ng-class="{'hovered': hovered}">
                                     <p md-truncate>{{task.title}}</p>
                                     <span class="md-secondary" ng-show="hovered">
-
-                                        <md-icon ng-confirm-message="Are you sure you want to update this task?" ng-confirm-click="updateTask(task)" style="color: {{base_hue_darker.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">cloud_upload</md-icon>
-                                        &nbsp;
-                                        <md-icon ng-confirm-message="Are you sure you want to run this task now?" ng-confirm-click="runTask(task)" ng-confirm-condition="true" style="color: {{base_hue_darker.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">sync</md-icon>
-                                        &nbsp;
-                                        <md-icon ng-confirm-message="Are you sure you want to delete this task?" ng-confirm-click="deleteTask(task)" ng-confirm-condition="true" style="color: {{base_hue_darker.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">delete</md-icon>
-                                        &nbsp;
-                                        <md-icon ng-click="openUpdateTask(task)" style="color: {{base_hue_darker.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">edit</md-icon>
+                                        <md-button ng-confirm-message="Are you sure you want to update this task?" ng-confirm-click="updateTask(task)" class="md-icon-button" style="margin: 0; padding: 0; height: 36px; width: 36px;">
+                                            <md-icon style="color: {{base_hue_darker.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">cloud_upload</md-icon>
+                                        </md-button>
+                                        <md-button ng-confirm-message="Are you sure you want to run this task now?" ng-confirm-click="runTask(task)" ng-confirm-condition="true" class="md-icon-button" style="margin: 0; padding: 0; height: 36px; width: 36px;">
+                                            <md-icon style="color: {{base_hue_darker.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">sync</md-icon>
+                                        </md-button>
+                                        <md-button ng-confirm-message="Are you sure you want to delete this task?" ng-confirm-click="deleteTask(task)" ng-confirm-condition="true" class="md-icon-button" style="margin: 0; padding: 0; height: 36px; width: 36px;">
+                                            <md-icon style="color: {{base_hue_darker.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">delete</md-icon>
+                                        </md-button>
+                                        <md-button ng-click="openUpdateTask(task)" class="md-icon-button" style="margin: 0; padding: 0; height: 36px; width: 36px;">
+                                            <md-icon style="color: {{base_hue_darker.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">edit</md-icon>
+                                        </md-button>
                                     </span>
                                     <md-divider ng-if="!$last"></md-divider>
                                 </md-list-item>
                             </md-list>
-                            <md-list ng-if="!tasklist.length" class="md-dense" flex>
+                            <md-list ng-if="tasklist.length == 0" class="md-dense" flex>
                                 <md-list-item flex layout="row" layout-align="start center">
                                     <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">report_problem</md-icon>
                                     <div>
@@ -122,7 +126,7 @@
                             <md-card-content>                             
                                 <md-list-item class="md-dense" flex layout="row" layout-align="start center">
                                     <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">report_problem</md-icon>
-                                    <p md-truncate>You don't have any incoming messsages yet.</p>
+                                    <p md-truncate>No incoming messsages yet.</p>
                                 </md-list-item>        
                         </md-card-content>
                         <md-card-actions layout="row" layout-align="end center" flex>
@@ -132,13 +136,6 @@
                 </div>
             </md-card-content>
             <!-- Company Info Screen -->
-
-
-            <md-card-actions layout="row" layout-align="end center" class="footer-backend">
-                <md-button disabled>Superpowered by Lightweight</md-button>
-                <div flex></div>
-                <md-button md-raised style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};" ng-click="closeTaskRunner()">Close</md-button>
-            </md-card-actions>
 
         </md-card>
     </md-content>
