--- a/lib/client/app/index.html
+++ b/lib/client/app/index.html
@@ -234,6 +234,8 @@
     <!-- Client Scripts -->
     <script src="../rootController.js" type="text/javascript"></script>
     <script src="../application/directives/palette.js" type="text/javascript"></script>
+    <script src="../application/directives/angular-recaptcha.js" type="text/javascript"></script>
+    
     <script src="../application/landing/controllers/landingController.js" type="text/javascript"></script>
     <script src="../application/pages/announcement/controllers/announcementController.js" type="text/javascript"></script>
     <script src="../loading.js" type="text/javascript"></script>
