seeing if removing this script helps when reloading specific pages... recaptcha doesn't rerender

--- a/lib/client/app/index.html
+++ b/lib/client/app/index.html
@@ -63,7 +63,7 @@
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
 
-    <script src="//www.google.com/recaptcha/api.js?onload=vcRecaptchaApiLoaded&amp;render=explicit" async defer></script>
+    <!-- <script src="//www.google.com/recaptcha/api.js?onload=vcRecaptchaApiLoaded&amp;render=explicit" async defer></script> -->
 
 
 
