--- a/lib/client/app/application/global/dialogs/settings.html
+++ b/lib/client/app/application/global/dialogs/settings.html
@@ -594,7 +594,7 @@
                                 </div>
                             </md-card-content>
                             <md-card-actions layout="row" layout-align="end center">
-                                <md-button class="md-raised" ng-if="staffgridview == false" ng-click="updateStaffOrder()" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}}; padding-left: 16px; padding-right: 16px;">update
+                                <md-button class="md-raised" ng-if="staffgridview == false" ng-click="updateStaffOrder(staffSortObj)" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}}; padding-left: 16px; padding-right: 16px;">update
                                 </md-button>
                             </md-card-actions>
                         </md-card>
