--- a/lib/client/app/application/global/dialogs/settings.html
+++ b/lib/client/app/application/global/dialogs/settings.html
@@ -424,6 +424,12 @@
                                         <input ng-model="page.settings.url" ng-disabled="page.locked == true">
                                     </md-input-container>
                                 </md-list-item>
+                                <md-list-item ng-show="page.settings.page_type == 'project'">
+                                    <span><p>Featured Project</p></span>
+                                    <md-input-container class="md-block lightweight-md-input md-secondary">
+                                        <md-switch ng-model="page.settings.configs.featured" aria-label="featured project settings"></md-switch>
+                                    </md-input-container>
+                                </md-list-item>
                             </md-card-content>
                             <md-card-actions layout="row" layout-align="end center">
                                 <md-button ng-confirm-message="Are you sure you want to remove this page?" ng-confirm-click="deletePage($index)" ng-confirm-condition="!page.settings.locked || !page.settings.linked" ng-disabled="page.settings.locked == true || page.settings.linked == true" class="md-whiteframe-2dp md-raised" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}}; padding-left: 16px; padding-right: 16px;">Delete</md-button>
