--- a/lib/client/app/application/global/dialogs/settings.html
+++ b/lib/client/app/application/global/dialogs/settings.html
@@ -433,6 +433,7 @@
                             </md-card-content>
                             <md-card-actions layout="row" layout-align="end center">
                                 <md-button ng-confirm-message="Are you sure you want to remove this page?" ng-confirm-click="deletePage($index)" ng-confirm-condition="!page.settings.locked || !page.settings.linked" ng-disabled="page.settings.locked == true || page.settings.linked == true" class="md-whiteframe-2dp md-raised" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}}; padding-left: 16px; padding-right: 16px;">Delete</md-button>
+                                <md-button ng-show="page.settings.page_type == 'project'" ng-confirm-message="Are you sure you want to update this project?" ng-confirm-click="modifyProject($index)" ng-confirm-condition="!page.settings.locked || !page.settings.linked" ng-disabled="page.settings.locked == true || page.settings.linked == true" class="md-whiteframe-2dp md-raised" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}}; padding-left: 16px; padding-right: 16px;">Update</md-button>
                             </md-card-actions>
                         </md-card>
                     </div>
