--- a/lib/client/app/index.html
+++ b/lib/client/app/index.html
@@ -217,6 +217,7 @@
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <script src="vendors/underscore-min.js" type="text/javascript"></script>
     <script src="vendors/proton.min.js" type="text/javascript"></script>
+    <script src="vendors/angular-socialshare.min.js"></script>
     <!-- Vendors -->
 
     <!-- Client Bootstrap -->
