--- a/lib/client/app/index.html
+++ b/lib/client/app/index.html
@@ -25,6 +25,8 @@
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
         <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.4/angular-material.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.css">
         <link rel="stylesheet" type="text/css" href="stylesheets/angular-typewrite.css">
         <link rel="stylesheet" type="text/css" href="stylesheets/app.css">
         <link rel="stylesheet" type="text/css" href="stylesheets/header.css">
@@ -218,6 +220,8 @@
     <script src="vendors/underscore-min.js" type="text/javascript"></script>
     <script src="vendors/proton.min.js" type="text/javascript"></script>
     <script src="vendors/angular-socialshare.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js" async defer></script>
+    <script src="vendors/slick.min.js" async defer></script>
     <!-- Vendors -->
 
     <!-- Client Bootstrap -->
