page overflow fix

--- a/lib/client/app/application/global/style.html
+++ b/lib/client/app/application/global/style.html
@@ -1,6 +1,6 @@
 <style>
 	/* Main Page Background */
-	md-content.page {background: {{base_hue_lightest.value}}!important;}
+	md-content.page {background: {{base_hue_lightest.value}}!important; overflow-x: hidden;}
 
 	/* Login Form Color */
 	md-toolbar.login_toolbar,
