--- a/lib/client/app/index.html
+++ b/lib/client/app/index.html
@@ -19,11 +19,11 @@
         <link rel="manifest" href="../manifest.json">
         <link rel="icon" href="media/logo-box-white.png">
 
-        <meta property="og:url" content="https://mmatexas.com/{{page_path}}"/>
+        <!-- <meta property="og:url" content="https://mmatexas.com/{{page_path}}"/>
         <meta property="og:type" content="website"/>
         <meta property="og:title" content="{{pageTitle}}"/>
         <meta property="og:description" content="{{projectPage.data.page.contents[1]}}" />
-        <meta property="og:image" content="{{projectPage.data.page.foreground.images.source}}" />
+        <meta property="og:image" content="{{projectPage.data.page.foreground.images.source}}" /> -->
         <!-- Metadata -->
 
 
