--- a/lib/client/app/index.html
+++ b/lib/client/app/index.html
@@ -226,7 +226,7 @@
     <script src="vendors/underscore-min.js" type="text/javascript"></script>
     <script src="vendors/proton.min.js" type="text/javascript"></script>
     <script src="vendors/angular-socialshare.min.js"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js" async defer></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js" async defer></script>
     <script src="vendors/slick.min.js" async defer></script>
     <!-- Vendors -->
 
