--- a/lib/client/app/index.html
+++ b/lib/client/app/index.html
@@ -162,6 +162,8 @@
 
         </div>
 
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
+
 
 	</body>
 
@@ -222,7 +224,7 @@
     <!-- AngularFire -->
 
     <!-- Vendors -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js" async defer></script>
+
     <script src="vendors/slick.min.js" async defer></script>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <script src="vendors/underscore-min.js" type="text/javascript"></script>
